--- a/assignment8/latex/assignment8.tex
+++ b/assignment8/latex/assignment8.tex
@@ -1,9 +1,20 @@
 \documentclass[12pt,letterpaper]{article}
 
+% - package setup
+\usepackage[doublespacing]{setspace}
+
+% - title setup
+\title{Assignment 8}
+\author{Crystal Mandal}
+\date{last edited \today}
 
 \begin{document}
 
-testytesty
+\maketitle
+
+\subsection*{Question 1:}
+The music (40 sounds) generated with the requisite 
+
 
 \end{document}
 
