--- a/assignment8/latex/assignment8.tex
+++ b/assignment8/latex/assignment8.tex
@@ -2,6 +2,7 @@
 
 % - package setup
 \usepackage[doublespacing]{setspace}
+\usepackage{csvsimple}
 
 % - title setup
 \title{Assignment 8}
@@ -12,9 +13,29 @@
 
 \maketitle
 
-\subsection*{Question 1:}
-The music (40 sounds) generated with the requisite 
+\section{Question 1:}
+The music (40 sounds) generated with the requisite parameters is displayed below:
 
+\lilypondfile{../ass8-flat-random.ly}
+
+\section{Question 2:}
+\subsection{Markov Bank}
+The bank of pitches (first 7 sounds) used in markov chain generation is:
+
+\lilypondfile{../ass8-markov-bank.ly}
+
+\subsection{Markov Chain Table}
+The table generated for the Markov Chain is:
+
+\csvautotabular{../ass8-markov-table.csv}
+
+\subsection{Markov Chain}
+The music (20 sounds) generated with the requisite parameters is displayed below:
+
+\lilypondfile{../ass8-markov-chain.ly}
+
+% - \section{Methodology}
 
 \end{document}
+
 
