--- a/assignment8/latex/assignment8.tex
+++ b/assignment8/latex/assignment8.tex
@@ -50,4 +50,8 @@ length of the \textbf{Markov Chain} are all configurable.
 To generate a new \code{ assignment8.pdf } document, run the script 
 \code{ ./assignment.sh  }. The usage for this command is detailled 
 by running \code{ ./assignment.sh -h  } or \code { ./assignment.sh --help  }
+
+The generated document is available as \code{assignment-print.pdf} in the 
+root directory.
+
 \end{document}
